# cookiecutter-basic-uv-cursor-memory

./: cookiecutter.json
{{cookiecutter.project_name}}/: Makefile  README.md  mkdocs.yml  pyproject.toml  uv.toml
{{cookiecutter.project_name}}/.cursor/rules/isolation_rules/visual-maps/: van-mode-map.mdc
{{cookiecutter.project_name}}/.cursor/rules/isolation_rules/visual-maps/van_mode_split/: van-mode-map.mdc
{{cookiecutter.project_name}}/.cursor/rules/isolation_rules/visual-maps/van_mode_split/van-qa-checks/: dependency-check.mdc
{{cookiecutter.project_name}}/docs/: projectbrief.md
{{cookiecutter.project_name}}/docs/about/: contributing.md
{{cookiecutter.project_name}}/{{cookiecutter.package_slug}}/: __init__.py  __main__.py
